--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,13 @@
 name: Daily Grafana Deployment
 
+#on:
+#  schedule:
+#    - cron: '0 3 * * *' # Every day at 3 AM UTC
+#  workflow_dispatch:
 on:
-  schedule:
-    - cron: '0 3 * * *' # Every day at 3 AM UTC
-  workflow_dispatch:
+  push:
+    branches:
+    - main
 
 jobs:
   deploy:
