--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,9 @@
 name: Daily Grafana Deployment
 
-#on:
-#  schedule:
-#    - cron: '0 3 * * *' # Every day at 3 AM UTC
-#  workflow_dispatch:
 on:
-  push:
-    branches:
-    - main
+  schedule:
+    - cron: '38 10 * * *' # Every day at 3 AM UTC
+  workflow_dispatch:
 
 jobs:
   deploy:
