[UPDATED]  nginx conf

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,9 +11,10 @@ http {
     keepalive_timeout  65;
 
     server {
-        listen       80;
+        listen       ${PORT};  # Heroku will replace this at runtime
         server_name  localhost;
 
+        # Serve geojson files with no cache
         location /maps/ {
             root /usr/share/grafana/public;
             add_header Cache-Control "no-store, must-revalidate";
@@ -21,8 +22,9 @@ http {
             add_header Expires "0";
         }
 
+        # Proxy everything else to Grafana
         location / {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://127.0.0.1:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
